# assurance_industrialisation

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
API/: Dockerfile  requirements.txt
API/app/: main.py
API/app/db/: database.py  models.py
API/app/routers/: prediction.py  vehicles.py
API/app/services/: predictor.py
Frequence/models/: catboost_calibrated.pkl
Frequence/src/: predict.py  preprocessing.py  train.py
Prime/src/: main.py
Severite/models/: catboost_severite.pkl
Severite/src/: predict.py  preprocessing.py  train.py
api/: Dockerfile
api/app/: main.py
api/app/data/: vehicles.json
api/app/models/: schemas.py
api/app/services/: db_services.py  predictor.py
frequence/src/: main.py
prime/src/: main.py
severite/src/: main.py  train_rf_poids.py
tests/: conftest.py  test_api.py
