[project]
name = "projet-data-science-assurance"
version = "0.1.0"
description = "Moteur de tarification assurance auto — fréquence, sévérité, prime pure"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.5",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.4.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.36",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["API"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
